Fixed layout issues and redirecting issues made the metrics and scannning tool

--- a/src/Dash.css
+++ b/src/Dash.css
@@ -187,6 +187,12 @@ body, html {
   
 }
 
+.clickable-metrics:hover {
+  opacity: 0.8;
+  transform: scale(1.05);
+  transition: all 0.3s ease;
+}
+
 /* Stats Section */
 .stats-section {
   padding: 40px 20px;
